--- a/app/templates/books.html
+++ b/app/templates/books.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tu tworzymy bibliotekę i widzimy listę</title>
+    <title>Biblioteka i lista</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
