--- a/app/templates/book.html
+++ b/app/templates/book.html
@@ -9,26 +9,20 @@
     <a href="/authors/">Do listy autorów</a><br><br>
     <a href="/books/">Do listy książek</a><br><br>
     <table>
-        <thead>
-        <th>Id</th>    
+        <thead>    
         <th>Tytuł</th>
         <th>Autor</th>
         <th>Rok wydania</th>
-        <th>Wypożyczenia</th>
         </thead>
         <tr>
-            <td>{{ book.id }}</td>
             <td>{{ book.title }}</td>
             <td>{{ book.author }}</td>
             <td>{{ book.year }}</td>
-            <td>{{ book.borrowed [-1]}}</td>
         </tr>
     </table>
 
     <br>
-    <a href ="/books/delete/{{book_id}}"><input type="submit" value="Usuń książkę z biblioteki"></a>
-
-    <a href ="/books/update/{{book_id}}"><input type="submit" value="Zmień dane książki"></a>-->
+    <a href ="/books/{{ book_id }}/delete"><input type="submit" value="Usuń książkę z biblioteki"></a>
 
     <h2> Zmień dane: </h2>
     <form method="POST" action="/books/{{ book_id }}">
@@ -42,7 +36,7 @@
             {% endfor %}
         </table>
         <br>
-        <input type="submit" value="Zapisz">
+        <input type="submit" value="Zmień">
     </form>
 </body>
 </html>
