--- a/app/templates/author_books.html
+++ b/app/templates/author_books.html
@@ -2,25 +2,29 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Spis autorów - lista</title>
+        <title>Spis książek wybranego autora</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
-        <h2>Lista autorów</h2>
-        <a href="/books/">Do listy książek</a><br><br>
-    <table>
-        <thead>
-        <th>Autor</th>
-        </thead>
-    {% for author in authors %}
-        <tr>
-            <td><a href="/authors/{{ author.id }}">{{ author.name }}</a></td>
-        </tr>
-    {% endfor %}
-    </table>
-    <div>
-        <h2> Dodaj nowego autora: </h2>
-        <form method="POST" action="/authors/">
+        <h2>Lista tytułów</h2>
+        <table>
+            <thead>
+            <th>Id</th>
+            <th>Tytuł</th>
+            <th>Rok wydania</th>
+            </thead>
+        {% for book in books %}
+            <tr>
+                <td>{{ book.id }}</td>
+                <td>{{ book.title }}</td>
+                <td>{{ book.year }}</td>
+            </tr>
+        {% endfor %}
+        </table>
+        <br>
+        <a href ="/authors/{{ author_id }}/delete"><input type="submit" value="Usuń autora ze spisu"></a>
+        <br><br>
+        <form method="POST" action="/authors/{{ author_id }}">
             {{ form.hidden_tag() }}
             <table>
                 {% for field in form if field.widget.input_type != 'hidden' %}
@@ -29,9 +33,11 @@
                         <td>{{ field }}</td>
                     </tr>
                 {% endfor %}
-            </table><br>
-            <input type="submit" value="Zapisz">
+            </table>
+            <br>
         </form>
-    </div>
+    <br>
+        <a href="/books/">Do listy książek</a><br><br>
+        <a href="/authors/">Do listy autorów</a>   
     </body>
 </html>
